# webapp-index

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile
assets/css/: main.css  tailwind.css
docs/: review.4.md
resources/: config.toml  tailwind.input.css
resources/android/assets/: index.html
resources/android/res/drawable/: fav.xml
scripts/: android-webview-assets-params.toml  android-webview-params.toml
src/: main.rs
src/backends/: conf.rs  mod.rs
src/components/: list.rs  mod.rs
src/views/: devel.rs  home.rs  mod.rs
