[package]
name = "akiapp"
version = "0.1.4"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
This is a webapp that provides aki's web index page.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
#license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-akiapp"


[package.metadata.patch]
crates = ["dioxus-fullstack"]

[patch.crates-io]
dioxus-fullstack = { path = "./patched/dioxus-fullstack-0.7.6" }

[dependencies]
# dioxus family
dioxus = { version = "0.7.6", features = ["fullstack", "router"] }
dioxus-desktop = { version = "0.7.6", optional = true }

# what dioxus depends on
anyhow = { version = "1.0" }
serde = { version = "1.0" }

# what dioxus depends on, optional
tokio = { version = "1.48", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }

# other, optional
console_error_panic_hook = { version = "0.1", optional = true }
semver = { version = "1.0.28", optional = true }
toml = { version = "1.1.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"


[features]
default = ["web"]

web = ["dioxus/web", "dep:console_error_panic_hook"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tracing", "dep:tokio", "dep:toml", "dep:semver"]

debian_build = ["desktop"]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-webapp"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This is a webapp that provides aki's web index page.
"""
depends = "$auto"
separate-debug-symbols = true

assets = [
    ["target/release/akiapp", "usr/bin/akiapp", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/akiapp/", "644"],
    ["README.md", "usr/share/doc/akiapp/", "644"],
]

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
